# Summit-Menu

./: .gitignore  CMakeLists.txt  TODO.md  about.md  changelog.md  logo.psd  mod.json
.github/workflows/: multi-platform.yml
include/: SummitAPI.hpp
src/: Config.cpp  Config.hpp  KeyManager.cpp  KeyManager.hpp  Loader.hpp  Summit.cpp  Summit.hpp  Utils.cpp  Utils.hpp
src/hacks/: Hack.cpp  Hack.hpp  Template  TemplateHack
src/hacks/bypass/: IconHack.cpp  IconHack.hpp  MainLevelBypass.cpp  MainLevelBypass.hpp  TextBypass.cpp  TextBypass.hpp
src/hacks/config/: Fonts.cpp  Fonts.hpp  MenuBall.cpp  MenuKeybind.cpp  MenuKeybind.hpp  ShowBall.cpp  ShowBall.hpp  UIScale.cpp  UIScale.hpp
src/hacks/global/: SafeMode.cpp  TestHack.cpp  TestHack.hpp
src/hacks/level/: AllPassable.cpp
src/hacks/shortcuts/: Settings.cpp  Shortcuts.cpp  Shortcuts.hpp
src/internal/: Config.cpp  Config.hpp  LoadManager.cpp  LoadManager.hpp  Summit.hpp
src/internal/hacks/: Hack.cpp  Hack.hpp
src/internal/hooks/: MenuLayer.cpp
src/internal/ui/: Style.cpp  Style.hpp  UIManager.cpp  UIManager.hpp
src/internal/ui/styles/: Style.cpp  Style.hpp
src/internal/ui/widgets/: LabelWidget.cpp  LabelWidget.hpp  ToggleWidget.cpp  ToggleWidget.hpp  Widget.cpp  (+1 more)
src/internal/utils/: Config.cpp  Config.hpp  KeybindManager.cpp  KeybindManager.hpp  LoadManager.cpp  LoadManager.hpp  UpdateManager.cpp  UpdateManager.hpp
src/ui/: CocosUI.cpp  CocosUI.hpp  FontManager.cpp  FontManager.hpp  MenuBall.cpp  MenuBall.hpp  UIManager.cpp  UIManager.hpp  Widget.cpp  Widget.hpp
src/ui/nodes/: CFMenuItem.cpp  CFMenuItem.hpp  MenuBall.cpp  MenuBall.hpp
src/ui/style/: ImTabbed.cpp  Style.cpp  Style.hpp
src/ui/styles/: Cocos.cpp  Cocos.hpp  CocosUI.cpp  CocosUI.hpp  ImTabbed.cpp  ImTabbed.hpp  Style.cpp  Style.hpp
src/ui/widgets/: Widget.hpp
src/utils/: HookManager.cpp  HookManager.hpp  Loader.cpp  Loader.hpp
(+6 files in other folders)
